@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.5
+Release: 0.7
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -505,6 +505,12 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Thu Sep 15 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.7
+- fix: revert to older/slower perldeps avoid getOutputFrom() error.
+
+* Wed Sep 14 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.6
+- build against neon-0.25.3.
+
 * Tue Aug 30 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.5
 - update uk.po (#142740).
 - fix: check-prereqs typo (#147196).
