@@ -11,6 +11,7 @@
 	- update uk.po (#142740).
 	- fix: check-prereqs typo (#147196).
 	- remove all uses of RPMSENSE_PREREQ.
+	- fix: revert to older/slower perldeps avoid getOutputFrom() error.
 
 4.4.1 -> 4.4.2:
 	- start 4.4.2 devel.
